@@ -1,5 +1,17 @@
 2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* gtk-gui/generated.cs:
+	* gtk-gui/CBinding.AddPathDialog.cs:
+	* gtk-gui/CBinding.CompilerPanel.cs:
+	* gtk-gui/CBinding.PackageDetails.cs:
+	* gtk-gui/CBinding.AddLibraryDialog.cs:
+	* gtk-gui/CBinding.EditPackagesDialog.cs:
+	* gtk-gui/CBinding.OutputOptionsPanel.cs:
+	* gtk-gui/CBinding.CodeGenerationPanel.cs:
+	* gtk-gui/CBinding.GeneralOptionsPanel.cs: Flush.
+
+2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* CBinding.mds:
 	* CBinding.mdp:
 	* CBinding.csproj: Migrated to MSBuild file format.
